<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DestinationActivity"
    android:background="@color/black">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toTopOf="@+id/socialMediaBar"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">



            <RelativeLayout
                android:id="@+id/relativeLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/roundFrameImage"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:scaleType="centerCrop"
                    app:srcCompat="@color/white" />

                <Button
                    android:id="@+id/button5"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:layout_margin="5dp"
                    android:background="@drawable/location"
                    android:onClick="openMapWithLocation" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    app:srcCompat="@drawable/image_gradient" />

                <TextView
                    android:id="@+id/eventTitleTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:maxLines="3"
                    android:padding="15dp"
                    android:fontFamily="@font/gray_cat"
                    android:text="Event Title"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    app:layout_constraintTop_toBottomOf="@+id/roundFrameImage"
                    tools:layout_editor_absoluteX="8dp" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/grey"
                android:orientation="horizontal"
                android:padding="8dp"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/gray_cat"
                    android:text="RATE: "
                    android:textColor="@color/cardview_light_background"
                    android:textSize="20sp" />

                <RatingBar
                    android:id="@+id/ratingBar"
                    style="@style/RatingBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:isIndicator="false"
                    android:numStars="5"
                    android:rating="5"
                    android:scaleX="1.5"
                    android:scaleY="1.5"
                    android:transformPivotY="10dp" />

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center">

                    <Button
                        android:id="@+id/button8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="8dp"
                        android:background="@color/light_grey"
                        android:fontFamily="@font/gray_cat"
                        android:onClick="openEventsListActivity"
                        android:text="Events"
                        android:textColor="@color/cardview_light_background"
                        android:textSize="20sp"
                        android:visibility="visible"
                        app:layout_constraintRight_toRightOf="parent" />
                </android.support.constraint.ConstraintLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/open_days"
                    android:textColor="@color/cardview_light_background"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/dateTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingEnd="15dp"
                    android:paddingStart="15dp"
                    android:text="@string/open_days_placeholder"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/openHours"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/open_hours"
                    android:textColor="@color/cardview_light_background"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/hoursTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingEnd="15dp"
                    android:paddingStart="15dp"
                    android:text="@string/open_hours_placeholder"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/destination_address"
                    android:textColor="@color/cardview_light_background"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/locationTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingEnd="15dp"
                    android:paddingStart="15dp"
                    android:text="@string/address_placeholder"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/textViewA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/destination_info"
                    android:textColor="@color/cardview_light_background"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/descriptionTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_weight="1"
                    android:paddingEnd="15dp"
                    android:paddingStart="15dp"
                    android:text="@string/open_info_placeholder"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

            </LinearLayout>

            <Button
                android:id="@+id/button16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_marginStart="20dp"
                android:onClick="saveDestination"
                android:textColor="@color/black"
                android:text="Save Destination" />

        </LinearLayout>
    </ScrollView>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/socialMediaBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <Button
            android:id="@+id/button6"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/facebook_logo"
            android:onClick="loadWebsite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button7"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button7"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginBottom="2dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/website_icon"
            android:onClick="loadWebsite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button9"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/twitter_logo"
            android:onClick="loadWebsite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button7" />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>